# document_classifier

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  README.md  config.yaml  docker-compose.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  pyproject.toml
grafana/provisioning/datasources/: datasources.yml
notebooks/: classifier_experiment.ipynb
notebooks/.ipynb_checkpoints/: classifier_experiment-checkpoint.ipynb
src/: classifier_app_local_test.py  run.py
src/app/: Dockerfile  api.py  inference.py  main.py  start_app_services.py
src/data/: data_prep.py
src/datasets/: text_dataset.py
src/frontend/: streamlit_app.py
src/models/: base_model.py  evaluate.py  testing.py  train.py  training.py  utils.py
src/models/final_model/: roberta_mlp_best_model.pth  roberta_mlp_best_model_torchscript.pt
src/observability/: logging.py
src/workflows/: inference.py  training.py
tests/: conftest.py  test_api.py  test_classifier_app_local_test.py  test_data_prep.py  test_dataset.py  test_inference.py  test_model.py  test_model_init.py  test_observability_logging.py  test_start_app_services.py  test_streamlit_app.py  test_train.py  test_training.py  test_utils.py  test_workflow_training.py
